Fix paramètre alignement bloc fichier

--- a/asset/css/page.css
+++ b/asset/css/page.css
@@ -6,6 +6,22 @@
 	text-align: center;
 }
 
+/* bloc assets */
+.assets.left{
+	float: left;
+	margin-right: 1rem;
+}
+
+.assets.right{
+	float: right;
+	margin-left: 1rem;
+}
+
+.assets.center{
+	width: 100%;
+	text-align: center;
+}
+
 /* recherche avancée */
 #recherche-avancee #advanced-search-form #form-search{
 	column-count: 2;
